==> Embdefire/ebf_stm32f103_mini_hal_code/36-SDIO—FatFs移植与读写测试/User/sdcard/bsp_spi_sdcard.c <==
#include "./sdcard/bsp_spi_sdcard.h"

static void GPIO_Configuration(void)
{
  /*定义一个GPIO_InitTypeDef类型的结构体*/
  GPIO_InitTypeDef  GPIO_InitStruct;

  SD_SPI_CLK(); 
  SD_SPI_SCK_GPIO_CLK(); 
  SD_DETECT_GPIO_CLK();

  /*选择要控制的GPIO引脚*/															   
  GPIO_InitStruct.Pin = SD_SPI_SCK_PIN;	  
  GPIO_InitStruct.Mode  = GPIO_MODE_AF_PP;  
  GPIO_InitStruct.Pull  = GPIO_PULLUP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
  HAL_GPIO_Init(SD_SPI_SCK_GPIO_PORT, &GPIO_InitStruct);	

  GPIO_InitStruct.Pin =  SD_SPI_MOSI_PIN;
  HAL_GPIO_Init(SD_SPI_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = SD_SPI_SCK_PIN;	
  HAL_GPIO_Init(SD_SPI_MOSI_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = SD_CS_PIN;	
  HAL_GPIO_Init(SD_CS_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = SD_DETECT_PIN;
  GPIO_InitStruct.Mode  =GPIO_MODE_INPUT; 
  HAL_GPIO_Init(SD_DETECT_GPIO_PORT, &GPIO_InitStruct);

  SpiHandle.Instance               = SPI1;
  SpiHandle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_2;
  SpiHandle.Init.Direction         = SPI_DIRECTION_2LINES;
  SpiHandle.Init.CLKPhase          = SPI_PHASE_2EDGE;
  SpiHandle.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  SpiHandle.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLE;
  SpiHandle.Init.CRCPolynomial     = 7;
  SpiHandle.Init.DataSize          = SPI_DATASIZE_8BIT;
  SpiHandle.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  SpiHandle.Init.NSS               = SPI_NSS_SOFT;
  SpiHandle.Init.TIMode            = SPI_TIMODE_DISABLE;

  SpiHandle.Init.Mode = SPI_MODE_MASTER;

  HAL_SPI_Init(&SpiHandle); 

  __HAL_SPI_ENABLE(&SpiHandle);     
}

uint8_t SD_WriteByte(uint8_t Data)
{
  /*!< Wait until the transmit buffer is empty */
  while(__HAL_SPI_GET_FLAG( &SpiHandle, SPI_FLAG_TXE ) == RESET)
  {
  }
  
  /*!< Send the byte */
   WRITE_REG(SpiHandle.Instance->DR, Data);
  
  /*!< Wait to receive a byte*/
  while(__HAL_SPI_GET_FLAG( &SpiHandle, SPI_FLAG_RXNE ) == RESET)
  {
  }
  
  /*!< Return the byte read from the SPI bus */ 
  return READ_REG(SpiHandle.Instance->DR);
}

uint8_t SD_ReadByte(void)
{
  uint8_t Data = 0;
  
  /*!< Wait until the transmit buffer is empty */
  while (__HAL_SPI_GET_FLAG( &SpiHandle, SPI_FLAG_TXE ) == RESET)
  {
  }
  /*!< Send the byte */
  WRITE_REG(SpiHandle.Instance->DR, SD_DUMMY_BYTE);

  /*!< Wait until a data is received */
  while(__HAL_SPI_GET_FLAG( &SpiHandle, SPI_FLAG_RXNE ) == RESET)
  {
  }
  /*!< Get the received data */
  Data = READ_REG(SpiHandle.Instance->DR);
  /*!< Return the shifted data */
  return Data;
}
